--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=TRACE, stdout    
+log4j.rootLogger=info, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=[%d] %p %m (%c)%n
@@ -9,8 +9,7 @@ log4j.appender.stdout.layout.ConversionPattern=[%d] %p %m (%c)%n
 #log4j.appender.fileAppender.layout.ConversionPattern= %-4r [%t] %-5p %c %x - %m%n
 
 
-# Turn on all our debugging info
-log4j.logger.kafka=TRACE,stdout
+log4j.logger.kafka=info,stdout
 #log4j.logger.kafka.producer.async.DefaultEventHandler=DEBUG,stdout
 #log4j.logger.kafka.consumer.PartitionTopicInfo=TRACE,stdout
 #log4j.logger.kafka.request.logger=TRACE,fileAppender
